fixed action margin and width

--- a/src/styles/blocks/action.scss
+++ b/src/styles/blocks/action.scss
@@ -2,6 +2,10 @@
   padding: 0;
   position: relative;
 
+  @include onDesktop {
+    margin-top: 200px;
+  }
+
   &__line {
     display: none;
 
@@ -25,6 +29,7 @@
       margin-top: 0;
     }
   }
+
   &__wrap {
     @include contentPaddingInline;
     margin-top: 100px;
@@ -66,10 +71,12 @@
 
     @include onDesktop {
       grid-column: 7 / -2;
+      width: 380px;
       font-size: 24px;
       text-align: left;
       justify-self: start;
       line-height: 36px;
+      letter-spacing: 1.20px;
       margin-top: 100px;
       margin-inline: 0;
     }
