--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,20 +11,15 @@
   letter-spacing: 2px;
   color: #f2f2f2;
   padding: 0;
+  display: block;
+  margin-inline: auto;
 
   cursor: pointer;
   transition: all 0.3s;
 
   @include onTablet {
-    // width: 280px;
     display: block;
-    // margin-inline: auto;
-  }
-
-  &--center {
-    @include onTablet {
-      margin-inline: auto;
-    }
+    margin-inline: auto;
   }
 
   &--desktop {
