--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,13 +1,12 @@
 .header {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 
   @include onDesktop {
     @include pageGrid;
     grid-template-rows: 170px 1fr;
-    margin-bottom: 200px;
   }
 
   &__top {
@@ -57,7 +56,7 @@
 
   &__title {
     margin: 0;
-    padding-bottom: 10px;
+    padding: 10px 20px;
     color: $main-dark-color;
     font-size: 24px;
     font-weight: 600;
@@ -76,7 +75,7 @@
       text-transform: none;
       line-height: 78px;
       text-align: left;
-      padding-bottom: 30px;
+      padding: 0 0 30px;
     }
   }
 
@@ -99,7 +98,6 @@
   &__button {
     @include contentPaddingInline;
     text-decoration: none;
-    // margin-inline: auto;
 
     &--desktop {
       margin-bottom: 50px;
