--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "utils/_mixins";
+@import "blocks/header";
+@import "utils/_vars";
+@import "blocks/icons";
+@import "blocks/main-page";
+@import "blocks/events";
+@import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/buttons";
+@import "blocks/footer";
+@import "blocks/nav";
+@import "blocks/aside-menu";
