fixed min-height for header on desktop, changed pattern tel in form

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,6 +5,7 @@
   width: 100%;
 
   @include onDesktop {
+    min-height: auto;
     @include pageGrid;
     grid-template-rows: 170px 1fr;
   }
@@ -30,6 +31,7 @@
     background-position: center;
     margin-bottom: 25px;
     flex-grow: 1;
+    max-height: 500px;
 
     @include onTablet {
       margin-inline: 27px;
