--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+.sections-name {
+  grid-column: 1/-1;
+  margin-bottom: 56px;
 
-body {
-  background: $c-gray;
+  @include onTablet {
+    margin-bottom: 48px;
+  }
+
+  @include onMobile {
+    margin-bottom: 40px;
+    margin-inline: auto;
+  }
 }
+
+@import "./_exhibitions";
+@import "./_gallery";
+@import "./_about-us"
