--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,52 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Montserrat-Bold";
+  src: url(../fonts/Montserrat/Montserrat-Bold.ttf);
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IbmPlexSans-Light";
+  src: url(../fonts/IBM-PLEX-SANS/IBMPlexSans-Light.ttf);
+  font-weight: 300;
+  font-size: normal;
+}
+
+@font-face {
+  font-family: "IbmPlexSans-Regular";
+  src: url(../fonts/IBM-PLEX-SANS/IBMPlexSans-Regular.ttf);
+  font-weight: 400;
+  font-size: normal;
+}
+
+@font-face {
+  font-family: "IbmPlexSans-Medium";
+  src: url(../fonts/IBM-PLEX-SANS/IBMPlexSans-Medium.ttf);
+  font-weight: 500;
+  font-size: normal;
+}
+
+@font-face {
+  font-family: "IbmPlexSans-SemiBold";
+  src: url(../fonts/IBM-PLEX-SANS/IBMPlexSans-SemiBold.ttf);
+  font-weight: 600;
+  font-size: normal;
+}
+
+@font-face {
+  font-family: "IbmPlexSans-Bold";
+  src: url(../fonts/IBM-PLEX-SANS/IBMPlexSans-Bold.ttf);
+  font-weight: 700;
+  font-size: normal;
+}
