--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,17 @@
-$c-gray: #eee;
+/* Device size */
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+/* Colors */
+$c-white: #fff;
+$c-black-h1: #000;
+$c-black: #0f0e08;
+$c-black-bg: #18181a;
+$c-grey: #687480;
+$c-grey-descr: #4e4e4e;
+$c-dark-green: #1a5a4c;
+$c-orange: #f14a27;
+
+/* any */
+$effectDuration: 0.3s;
+$borderStyle: 1px solid rgba(26, 90, 76, 0.5);
