--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,54 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  /* H1 font-styles */
+  @include reset;
+
+  font-family: "Montserrat-Bold", sans-serif;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  color: $c-black-h1;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 120%;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  /* H2 font-styles */
+  @include reset;
+
+  font-family: "Montserrat-Bold", sans-serif;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  color: $c-black;
+
+  @include onTablet {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  /* H3 font-styles */
+  @include reset;
+
+  font-family: "Montserrat-Regular", sans-serif;
+  font-size: 28px;
+  font-style: normal;
   font-weight: 400;
+  line-height: 100%;
+  color: $c-black;
+
+  @include onTablet {
+    font-size: 36px;
+  }
 }
