--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
 @import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/about-us.scss";
+@import "./blocks/container.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/form.scss";
+@import "./blocks/galary.scss";
+@import "./blocks/header.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/page.scss";
+@import "./blocks/slider.scss";
