--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$white: #fff;
+$main-c: #0f0e08;
+$gray: #4e4e4e;
+$moon-gray: #687480;
+$green: #1a5a4c;
+$orange: #f14a27;
+
+$t-anim: 0.3s;
