--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 @import "fonts";
 @import "typography";
 
+@import "../styles/utils/reset.scss";
+
+@import "../styles/blocks/title.scss";
+
 body {
   background: $c-gray;
 }
