--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,8 +1,8 @@
 .title {
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 45px;
   font-weight: 700;
   line-height: 45px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: center;
 }
