--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,4 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../styles/utils/reset";
 
-@import "../styles/utils/reset.scss";
-
-@import "../styles/blocks/title.scss";
-
-body {
-  background: $c-gray;
-}
+@import "../styles/blocks/title";
+@import "../styles/blocks/header";
