--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
   background-color: aquamarine;
+  background-image: url(../../images/header-background.jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
