--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -68,6 +68,8 @@
       width: 24px;
       height: 24px;
 
+      @include hover (opacity, $v-opac);
+
       background-image: url(../images/footer/instagram-logo.svg);
       background-size: cover;
       background-position: center;
@@ -78,6 +80,8 @@
       display: block;
       width: 24px;
       height: 24px;
+
+      @include hover (opacity, $v-opac);
 
       background-image: url(../images/footer/facebook-logo.svg);
       background-size: cover;
@@ -213,6 +217,8 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
+
+    @include hover (opacity, $v-opac);
   }
 }
 
