--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -4,9 +4,7 @@
   height: 50px;
   transition: box-shadow $t-anim;
 
-  &:hover {
-    box-shadow: 1px 4px 16px #e8e8f066;
-  }
+  @include hover (box-shadow, 1px 4px 16px #e8e8f066);
 
   @include onTablet {
     gap: 16px;
