--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -48,6 +48,8 @@
     font-weight: 500;
     line-height: 16px;
 
+    @include hover (opacity, $v-opac);
+
     @include onTablet {
       width: 100px;
     }
