new Museum repair

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -30,6 +30,10 @@
     color: $moon-gray;
     cursor: pointer;
 
+    &:focus {
+      outline: none;
+    }
+
     @include onTablet {
       height: 70px;
     }
