--- a/src/styles/elements/icons.scss
+++ b/src/styles/elements/icons.scss
@@ -8,3 +8,11 @@
 .menu-icon {
   background-image: url(../images/burger-menu.png);
 }
+
+.facebook-icon {
+  background-image: url(../images/facebook-icon.png);
+}
+
+.insta-icon {
+  background-image: url(../images/instagram-icon.png);
+}
