--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,11 +7,17 @@
 @import "./blocks/constainer.scss";
 @import "./blocks/events.scss";
 @import "./blocks/sections.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/classicism-romanticism.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
 
 body,
 a,
 h1,
 h2,
-h3 {
+h3,
+hr,
+input {
   @include reset;
 }
