--- a/src/styles/blocks/classicism-romanticism.scss
+++ b/src/styles/blocks/classicism-romanticism.scss
@@ -20,7 +20,7 @@
     width: 280px;
     margin-top: -57px;
     background: #fff;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
   }
 
   &__inform {
@@ -29,7 +29,7 @@
     align-items: center;
     justify-content: space-around;
     color: #687480;
-    font-family: IBM Plex Sans;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%; /* 16px */
@@ -39,8 +39,8 @@
 
   &__date {
     display: flex;
-    color: #1A5A4C;
-    font-family: IBM Plex Sans;
+    color: #1a5a4c;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
