--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -28,8 +28,8 @@
 
   &__inform {
     @include pageGrid;
-    color: #0F0E08;
-    font-family: IBM Plex Sans;
+    color: #0f0e08;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -71,7 +71,7 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
     cursor: pointer;
   }
 
@@ -90,7 +90,7 @@
     height: 1px;
     width: 100%;
     color: beige;
-    background-color: #1A5A4C;
+    background-color: #1a5a4c;
     margin-top: 20px;
   }
 
@@ -101,7 +101,7 @@
   }
 
   &__link {
-    color: #0F0E08;
+    color: #0f0e08;
   }
 
   &__copyright {
@@ -110,14 +110,12 @@
     margin-top: 80px;
     gap: 10px;
     width: 100%;
-    color: #0F0E08;
+    color: #0f0e08;
     text-align: center;
-    font-family: IBM Plex Sans;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 300;
-    line-height: 140.625%; /* 16.875px */
-
+    line-height: 140.63%; /* 16.875px */
   }
-
 }
