--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -5,8 +5,8 @@
 
   &__title {
     text-align: center;
-    color: #0F0E08;
-    font-family: Montserrat;
+    color: #0f0e08;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -47,6 +47,6 @@
 
   &__btn:hover {
     transform: scale(1.2);
-    background-color: #1A5A4C;
+    background-color: #1a5a4c;
   }
 }
