--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -10,9 +10,9 @@
   padding: 0 20px;
 
   &__title {
-    color: #FFF;
+    color: #fff;
     text-align: center;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -21,9 +21,9 @@
   }
 
   &__article {
-    color: #FFF;
+    color: #fff;
     text-align: center;
-    font-family: IBM Plex Sans;
+    font-family: IBM Plex Sans, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -53,7 +53,7 @@
 
   &__input::placeholder {
     color: #687480;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -64,7 +64,7 @@
     @include centring;
     width: 50px;
     height: 50px;
-    background-color: #F14A27;
+    background-color: #f14a27;
     cursor: pointer;
   }
 
@@ -72,6 +72,4 @@
     width: 24px;
     height: 24px;
   }
-
-
 }
