--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -55,10 +55,37 @@
   &__picture {
     height: 100%;
 
+    @include onTablet {
+      width: 370px;
+      object-fit: cover;
+    }
+
     &--1 {
       @include onDesktop {
         width: 370px;
         object-fit: cover;
+      }
+    }
+
+    &--3 {
+      @include onDesktop {
+        width: 770px;
+        height: 600px;
+      }
+    }
+
+    &--4 {
+      @include onDesktop {
+        display: block;
+        width: 770px;
+        height: 360px;
+      }
+    }
+
+    &--5 {
+      @include onDesktop {
+        width: 370px;
+        height: 360px;
       }
     }
   }
@@ -124,16 +151,54 @@
     }
 
     @include onTablet {
+      &--1:checked ~ .slider__inner > .slider__list {
+        left: 20%;
+      }
+
       &--2:checked ~ .slider__inner > .slider__list {
         left: -20%;
       }
 
       &--3:checked ~ .slider__inner > .slider__list {
-        left: -90%;
+        .slider__picture--1 {
+          display: none;
+        }
+
+        left: -20%;
       }
 
       &--5:checked ~ .slider__inner > .slider__list {
-        left: -180%;
+        .slider__picture--1 {
+          display: none;
+        }
+
+        left: -70%;
+      }
+    }
+
+    @include onDesktop {
+      &--1:checked ~ .slider__inner > .slider__list {
+        left: 0;
+      }
+
+      &--2:checked ~ .slider__inner > .slider__list {
+        left: 0;
+      }
+
+      &--3:checked ~ .slider__inner > .slider__list {
+        .slider__picture--1 {
+          display: block;
+        }
+
+        left: 0;
+      }
+
+      &--5:checked ~ .slider__inner > .slider__list {
+        .slider__picture--1 {
+          display: block;
+        }
+
+        left: 0;
       }
     }
   }
