menu & ticket buttons ready

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,7 @@
 @import "../styles/utils/reset";
 
-@import "../styles/blocks/title";
-@import "../styles/blocks/header";
+@import "./blocks/title.scss";
+@import "./blocks/header.scss";
+@import "./blocks/button.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
