--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,34 @@
 .header {
-  background-color: aquamarine;
-  background-image: url(../../images/header-background.jpg);
-  min-height: 100vh;
+  margin-top: 0px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  padding: 0 20px 70px;
+  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
+  justify-content: space-between;
+
+  &__photo {
+    width: 100%;
+    height: 100%;
+    align-self: flex-start;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 0;
+  }
+
+  &__menu {
+    position: absolute;
+    z-index: 1;
+    top: 27px;
+    left: 20px;
+  }
+
+  &__logo {
+    position: absolute;
+    z-index: 1;
+    width: 55px;
+    height: 61px;
+    top: 9px;
+  }
 }
