--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,6 +3,6 @@
   height: 24px;
 
   &__menu {
-    background-image: url('../images/icons/menu_burger.svg');
+    background-image: url("../images/icons/menu_burger.svg");
   }
 }
