--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,7 +1,7 @@
 .button {
   width: 280px;
   height: 50px;
-  border: 1px solid #1A5A4C;
+  border: 1px solid #1a5a4c;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -13,7 +13,6 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0em;
     text-align: center;
     width: 230px;
   }
@@ -22,8 +21,8 @@
     width: 50px;
     height: 50px;
     text-align: center;
-    background-color: #1A5A4C;
-    background-image: url('../images/icons/arrow_right.svg');
+    background-color: #1a5a4c;
+    background-image: url("../images/icons/arrow_right.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
