--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,6 +5,7 @@
   align-items: center;
   box-sizing: border-box;
   justify-content: space-between;
+  align-items: center;
 
   &__photo {
     width: 100%;
@@ -25,8 +26,8 @@
   &__logo {
     position: absolute;
     z-index: 1;
-    width: 55px;
-    height: 61px;
     top: 9px;
+    left: 50%;
+    transform: translate(-50%);
   }
 }
