--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -2,4 +2,6 @@
   background-image: url(../images/logo.png);
   background-repeat: no-repeat;
   background-position: center;
+  width: 55px;
+  height: 61px;
 }
