--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -5,4 +5,9 @@
   line-height: 45px;
   letter-spacing: 0;
   text-align: center;
+
+  &--secondary {
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
