--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -10,4 +10,12 @@
     font-size: 36px;
     line-height: 36px;
   }
+
+  &--third {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0;
+    text-align: left;
+  }
 }
