create title with red rectangle

--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -5,6 +5,7 @@
   line-height: 45px;
   letter-spacing: 0;
   text-align: center;
+  color: #0f0e08;
 
   &--secondary {
     font-size: 36px;
@@ -17,5 +18,15 @@
     line-height: 28px;
     letter-spacing: 0;
     text-align: left;
+  }
+
+  &--rectangle {
+    &::after {
+      content: '';
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background-image: url(../images/icons/rectangle_red.svg);
+    }
   }
 }
