--- a/src/styles/_actions.scss
+++ b/src/styles/_actions.scss
@@ -6,6 +6,29 @@
     align-items: start;
   }
 
+  &__exibitions {
+    @include paddingInline;
+    margin-bottom: 60px;
+
+    @include onDesktop {
+      margin-bottom: 105px;
+    }
+  }
+
+  &__lectures {
+    margin-bottom: 185px;
+
+    @include onTablet {
+      @include paddingInline;
+      margin-bottom: 210px;
+    }
+
+    @include onDesktop {
+      padding: 0;
+      margin-bottom: 300px;
+    }
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
@@ -36,6 +59,7 @@
       font-size: 48px;
       line-height: 48px;
       margin-bottom: 48px;
+      text-align: left;
     }
 
     @include onDesktop {
