--- a/src/styles/_exibition.scss
+++ b/src/styles/_exibition.scss
@@ -21,6 +21,11 @@
       width: 698px;
       height: 520px;
     }
+
+    @include onDesktop {
+      width: 670px;
+      height: 520px;
+    }
   }
 
   &__text {
