--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -4,11 +4,13 @@
   background-size: 320px 300px;
 
   @include onTablet {
+    height: 384px;
     background-position: top right;
-    background-size: 374px 384px;
+    background-size: 375px 385px;
   }
 
   @include onDesktop {
+    height: 725px;
     background-size: 725px 655px;
   }
 
@@ -36,7 +38,7 @@
     }
 
     @include onDesktop {
-      margin-left: 500px;
+      margin-left: 535px;
     }
 
     &--img {
@@ -54,15 +56,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 70px;
 
     @include onTablet {
       @include pageGrid;
-      margin-bottom: 110px;
-    }
-
-    @include onDesktop {
-      margin-bottom: 320px;
     }
   }
 
@@ -87,6 +83,10 @@
     }
 
     @include onDesktop {
+      font-size: 72px;
+      line-height: 86px;
+      text-align: left;
+
       grid-column: 1 / 6;
       margin-bottom: 90px;
     }
