--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -16,4 +16,21 @@
       pointer-events: all;
     }
   }
+
+  &__header {
+    margin-bottom: 70px;
+
+    @include onTablet {
+      margin-bottom: 90px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__galery {
+    margin-bottom: 130px;
+  }
 }
+
