--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,10 +10,19 @@
 @import "main";
 @import "actions";
 @import "exibition";
+@import "lecture";
+@import "galery";
+@import "slides";
+@import "subscribe";
+@import "form";
 
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+html {
+  background-color: #eee;
 }
 
 h1,
@@ -31,7 +40,7 @@ body {
   margin: 0;
   padding: 0;
   margin-inline: auto;
-
+  background-color: #fff;
 
   max-width: 320px;
   @include onTablet {
@@ -39,6 +48,6 @@ body {
   }
 
   @include onDesktop {
-    max-width: 1200px;
+    max-width: 1280px;
   }
 }
