--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/header";
+@import "./blocks/container";
+@import "./blocks/menu";
+@import "./blocks/section";
+@import "./blocks/events";
+@import "./blocks/galery";
+@import "./blocks/subscribe";
+@import "./blocks/footer";
 
 body {
-  background: $c-gray;
+  font-family: "IBM Plex Sans", sans-serif;
+  // font-family: "Montserrat", sans-serif;
+  display: block;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+
+  &:has(.menu:target) {
+    overflow: hidden;
+  }
+
+}
+
+.on-hover-link:hover {
+  text-decoration: underline;
 }
