--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,19 @@
 $c-gray: #eee;
+$text-main:#000;
+$text-secondary:#fff;
+$button-secondary:#0f0e08;
+$bg-secondary-color: #1a5a4c;
+$bg-button: #f14a27;
+
+$mobile-margin: 20px;
+$tablet-margin: 30px;
+$desktop-margin: 55px;
+
+$grid-gap--mobile: 20px;
+$grid-gap: 30px;
+
+$grid-column--phone: 130px;
+$grid-column--tablet: 90px;
+$grid-column--desktop: 70px;
+
+$hover-speed: 500ms;
