--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,7 @@
-h1 {
+* {
+  margin: 0;
   @extend %h1;
+  font-family: IBM Plex Sans, sans-serif;
+  scroll-behavior: smooth;
+  transition: $hover-speed;
 }
