html & css for pictures in events

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -9,11 +9,11 @@
   &__date {
     font-weight: 500;
     line-height: 16px;
+    word-spacing: 65px;
 
     &--highlight {
       font-weight: 700;
       line-height: 24px;
-      text-align: left;
       color: #1a5a1a;
     }
   }
