--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -22,7 +22,7 @@
 
   &--rectangle {
     &::after {
-      content: '';
+      content: "";
       display: inline-block;
       width: 10px;
       height: 10px;
