--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -141,6 +141,19 @@
       font-size: 36px;
     }
 
+    &::after {
+      display: block;
+      content: "";
+      width: 10px;
+      height: 10px;
+      background: $bg-button;
+
+      @include onTablet {
+        width: 15px;
+        height: 15px;
+      }
+    }
+
   }
   &__description {
     margin-top: 10px;
@@ -150,10 +163,4 @@
     line-height: 150%; /* 24px */
   }
 
-}
-
-.square {
-  width: 10px;
-  height: 10px;
-  background: $bg-button;
 }
