--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -91,11 +91,13 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 100%; /* 14px */
+    outline: 0;
     @include onTablet {
       padding-block: 18px;
     }
   }
   &__button {
+    cursor: pointer;
     padding: 0;
     border: none;
     align-items: center;
