--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -57,6 +57,7 @@
     display: grid;
     row-gap: 20px;
     margin-top: 40px;
+    height: fit-content;
 
     @include onTablet {
       grid-row: 3;
@@ -70,6 +71,7 @@
     @include onDesktop {
       grid-column: span 2;
       grid-row: 1;
+      margin: 0;
     }
   }
 
