--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -56,6 +56,19 @@
     }
   }
 
+  &__schedule {
+    margin-bottom: 16px;
+
+    @include onTablet {
+      margin: 0;
+      margin-right: 26px;
+    }
+
+    @include onDesktop {
+      margin-right: 30px;
+    }
+  }
+
   &__item{
     width: 100px;
     display: flex;
@@ -103,30 +116,6 @@
         margin-right: 102px;
       }
     }
-  }
-
-  &__weekend {
-    font-weight: 400;
-    color: #fff;
-    font-family: $font-family--2;
-    font-size: 14px;
-    line-height: 21px;
-    letter-spacing: 0em;
-
-    @include onTablet {
-      display: flex;
-      flex-direction: column;
-      justify-content: end;
-      width: 144px;
-    }
-  }
-
-  &__bold {
-    font-family: $font-family--1;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 21px;
-    letter-spacing: 0em;
   }
 
   &__bottom {
