--- a/src/styles/_schedule.scss
+++ b/src/styles/_schedule.scss
@@ -1,17 +1,4 @@
 .schedule {
-  width: 170px;
-  height: 145px;
-  margin-bottom: 16px;
-
-  @include onTablet {
-    margin: 0;
-    margin-right: 26px;
-  }
-
-  @include onDesktop {
-    margin-right: 30px;
-  }
-
   &__title {
     font-family: $font-family--2;
     font-size: 14px;
@@ -20,6 +7,10 @@
     letter-spacing: 0em;
     color: #fff;
     margin-bottom: 20px;
+
+    &--footer {
+      color: #0F0E08;
+    }
   }
 
   &__list {
@@ -35,6 +26,10 @@
     font-size: 14px;
     line-height: 21px;
     letter-spacing: 0em;
+
+    &--footer {
+      color: #0F0E08;
+    }
   }
 
   &__bold {
