--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import "icon";
 @import "tickets";
 @import "menu";
+@import "weekend";
 @import "schedule";
 @import "main";
 @import "actions";
@@ -15,6 +16,8 @@
 @import "slides";
 @import "subscribe";
 @import "form";
+@import "footer";
+@import "contacts";
 
 * {
   box-sizing: border-box;
