--- a/src/styles/_icon.scss
+++ b/src/styles/_icon.scss
@@ -15,4 +15,12 @@
   &--close {
     background-image: url(../images/icons/icon--close.svg);
   }
+
+  &--facebook {
+    background-image: url(../images/icons/facebook.svg);
+  }
+
+  &--instagram {
+    background-image: url(../images/icons/instagram.svg);
+  }
 }
