--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -88,6 +88,11 @@
     line-height: 16px;
     letter-spacing: 0em;
     color: #fff;
+    transition: text-shadow .7s;
+
+    &:hover {
+      text-shadow: 0 0 10px #fff
+    }
 
     @include onDesktop {
       font-size: 22px;
