--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -115,6 +115,11 @@
       font-size: 14px;
       font-weight: 700;
       line-height: 100%;
+      transition: .7s;
+
+      &:hover {
+        margin-bottom: 10px;
+      }
     }
 
     &-line {
