--- a/src/styles/_tickets.scss
+++ b/src/styles/_tickets.scss
@@ -32,6 +32,11 @@
     width: 48px;
     height: 48px;
     background-color: #1a5a4c;
+    transition: .5s;
+
+    &:hover {
+      background-color: #257d6b;
+    }
 
     @include onTablet {
       width: 68px;
