--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -32,13 +32,13 @@
     color: #000;
 
     @include onTablet {
-    font-size: 18px;
+    font-size: 16px;
       width: 374px;
     }
 
     @include onDesktop {
       padding-inline: 32px;
-      font-size: 24px;
+      font-size: 18px;
       width: 470px;
     }
 
@@ -72,5 +72,11 @@
     background-image: url(../images/icons/icon--tickets--black.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition: background-color .5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #eb2700;
+    }
   }
 }
