html & css for separator

--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -29,4 +29,10 @@
       background-image: url(../images/icons/rectangle_red.svg);
     }
   }
+
+  &--separator {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 28px;
+  }
 }
