--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,4 @@
 @import "./blocks/main.scss";
 @import "./blocks/events.scss";
 @import "./blocks/picture.scss";
+@import "./blocks/separator.scss";
