--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,5 +1,5 @@
 .events {
-  font-family: IBM Plex, sans-serif;
+  font-family: IBM Plex Sans, sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
@@ -9,7 +9,8 @@
   &__date {
     font-weight: 500;
     line-height: 16px;
-    word-spacing: 65px;
+    word-spacing: 55px;
+    color: #687480;
 
     &--highlight {
       font-weight: 700;
@@ -19,13 +20,6 @@
   }
 
   &__info {
-    font-family: IBM Plex, sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 24px;
-    letter-spacing: 0;
-    text-align: left;
     color: #4e4e4e;
-
   }
 }
