--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,9 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "header";
+@import "titles";
+@import "aside";
 
 body {
   background: $c-gray;
