--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "page";
+@import "normalize";
+@import "container";
+@import "header";
+@import "button";
+@import "menu";
+@import "menu-nav";
+@import "bottom-bar";
+@import "events";
+@import "event";
+@import "folowing";
+@import "lecture";
+@import "galery";
+@import "footer";
+@import "icons";
+@import "how-to-contact";
+@import "footer-nav";
