--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
 $c-gray: #eee;
+$c-orange: #f14a27;
+$c-dark-green: #1a5a4c;
+$fc-main-black: #0f0e08;
+$fc-white: #fff;
+$fc-secondary-gray: #687480;
+$fc-text-gray: #4e4e4e;
+
+$speedAnimation: 0.3s;
