--- a/src/styles/footer-nav.scss
+++ b/src/styles/footer-nav.scss
@@ -17,6 +17,9 @@
     font-size: 14px;
     color: $fc-main-black;
 
-    @include linksUderline($fc-main-black);
+    &:hover {
+      color: $c-dark-green;
+      border-bottom: 1px solid $c-dark-green;
+    }
   }
 }
