--- a/src/styles/how-to-contact.scss
+++ b/src/styles/how-to-contact.scss
@@ -32,6 +32,17 @@
     font-weight: 600;
   }
 
+  &__link {
+    font-size: 14px;
+    text-decoration: none;
+    color: $fc-main-black;
+
+    &:hover {
+      color: $c-dark-green;
+      border-bottom: 1px solid $c-dark-green;
+    }
+  }
+
   &__button {
     position: absolute;
     height: 50px;
