--- a/src/styles/elements/icons.scss
+++ b/src/styles/elements/icons.scss
@@ -1,12 +1,17 @@
 .icon {
+  display: flex;
   background-position: center;
   background-size: cover;
   height: 24px;
   width: 24px;
 }
 
-.menu-icon {
+.menu--icon {
   background-image: url(../images/burger-menu.png);
+}
+
+.icon--close {
+  background-image: url(../images/icon-close.png);
 }
 
 .facebook-icon {
