--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,3 +1,18 @@
 .page {
   min-width: 320px;
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &__menu:target {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
