--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/classicism-romanticism.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/menu.scss";
 
 body,
 a,
