--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -5,6 +5,8 @@
     grid-column: 1 / -1;
     width: 100%;
     margin-bottom: 16px;
+    cursor: pointer;
+
     transition: transform $speedAnimation;
 
     @include onTablet {
