--- a/src/styles/folowing.scss
+++ b/src/styles/folowing.scss
@@ -47,6 +47,7 @@
   &__form {
     display: flex;
     justify-content: center;
+
   }
 
   &__input {
@@ -58,8 +59,8 @@
     font-weight: 400;
     font-size: 14px;
     color: $fc-secondary-gray;
-
     border: none;
+    cursor: pointer;
 
     @include onTablet {
       width: 374px;
@@ -91,6 +92,7 @@
     background-position: center;
     background-repeat: no-repeat;
     border: none;
+    cursor: pointer;
 
     @include onTablet {
       height: 70px;
