--- a/src/styles/footer-nav.scss
+++ b/src/styles/footer-nav.scss
@@ -16,10 +16,13 @@
     font-weight: 400;
     font-size: 14px;
     color: $fc-main-black;
+    border-bottom: 1px solid rgba(26, 90, 76, 0);
+
+    transition: color $speedAnimation, border-color $speedAnimation;
 
     &:hover {
       color: $c-dark-green;
-      border-bottom: 1px solid $c-dark-green;
+      border-color: $c-dark-green;
     }
   }
 }
