--- a/src/styles/how-to-contact.scss
+++ b/src/styles/how-to-contact.scss
@@ -36,10 +36,13 @@
     font-size: 14px;
     text-decoration: none;
     color: $fc-main-black;
+    border-bottom: 1px solid rgba(26, 90, 76, 0);
+
+    transition: color $speedAnimation, border-color $speedAnimation;
 
     &:hover {
       color: $c-dark-green;
-      border-bottom: 1px solid $c-dark-green;
+      border-color: $c-dark-green;
     }
   }
 
