html for gallery section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import "./blocks/events.scss";
 @import "./blocks/picture.scss";
 @import "./blocks/separator.scss";
+@import "./blocks/gallery.scss";
