--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -9,7 +9,10 @@
   box-sizing: border-box;
 
   &__tickets {
-    font-family: IBM Plex, sans-serif;
+    font-family: IBM Plex Sans, sans-serif;
+    text-decoration: none;
+    color: #0f0e08;
+    ;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
