--- a/src/styles/blocks/separator.scss
+++ b/src/styles/blocks/separator.scss
@@ -1,5 +1,5 @@
 .separator {
-  margin: 0 -20px;
+  margin: 60px -20px 100px -20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,7 +23,6 @@
     color: #687480;
     margin-bottom: 20px;
     word-spacing: 15px;
-
 
     &--highlight {
       font-weight: 700;
