add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,24 @@
 @import "header";
 @import "titles";
 @import "aside";
+@import "icon";
+@import "top-bar";
+@import "current__events";
+
+html {
+  scroll-behavior: smooth;
+
+}
 
 body {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
   background: $c-gray;
+  color: #fff;
+
+  margin: 0 auto;
+  box-sizing: border-box;
 }
