--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -1,8 +1,8 @@
 .side__bar {
   width: 100%;
-  height: 420px;
-  background-color: #1a5a4c;
+  height: 100vh;
   min-width: 320px;
+  background: rgba(26, 90, 76, 0.55);
 
   position: fixed;
   top: 0;
@@ -22,12 +22,48 @@
     overflow: hidden;
   }
 
-  @include onTablet {
-    height: 225px;
+  &__top {
+    display: flex;
+    grid-column: 1 / -1;
+    margin-bottom: 50px;
+
+    @include onTablet {
+      grid-column: 1 / 4;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 6;
+    }
+
+    &--left,
+    &--right {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      margin-right: 28px;
+
+      @include onDesktop {
+        gap: 30px;
+      }
+    }
   }
 
-  @include onDesktop {
-    height: 233px;
+  &__line {
+    width: 100%;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5);
+    margin-bottom: 24px;
+
+    grid-column: 1 / -1;
+
+    @include onTablet {
+      width: 145px;
+      position: fixed;
+      top: 9%;
+      right: 45%;
+      transform: rotate(-90deg);
+      flex-shrink: 0;
+    }
   }
 }
 
@@ -38,63 +74,52 @@
   padding-top: 27px;
   padding-bottom: 27px;
 
+  width: 100%;
+  height: 420px;
+  background-color: $museum-green;
+  min-width: 320px;
+
   @include onTablet {
+    height: 225px;
     padding-top: 40px;
     padding-bottom: 40px;
   }
-}
-
-.side__top {
-  display: flex;
-  grid-column: 1 / -1;
-  margin-bottom: 50px;
-
-  @include onTablet {
-    grid-column: 1 / 4;
-  }
 
   @include onDesktop {
-    grid-column: 1 / 6;
-  }
-
-  &--left,
-  &--right {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    margin-right: 28px;
-
-    @include onDesktop {
-      gap: 30px;
-    }
+    height: 233px;
   }
 }
 
 .side__link {
+  position: relative;
   text-decoration: none;
-  color: #fff;
-  font-family: "IBM Plex Sans", sans-serif;
+  color: $white-text-color;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: 100%;
-}
 
-.side__bar__line {
-  width: 100%;
-  height: 1px;
-  background: rgba(255, 255, 255, 0.5);
-  margin-bottom: 24px;
+  transition: 0.3s;
 
-  grid-column: 1 / -1;
+  &:hover {
+    transform: scale(1.2);
+  }
 
-  @include onTablet {
-    width: 145px;
-    position: fixed;
-    top: 50%;
-    right: 45%;
-    transform: rotate(-90deg);
-    flex-shrink: 0;
+  &::after {
+    content: " " ;
+    position: absolute;
+    bottom: -8px;
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: $white-text-color;
+
+    transition: transform 0.3s;
+    transform: scale(0);
+  }
+
+  &:hover::after {
+    justify-content: center;
+    transform: scale(1);
   }
 }
 
@@ -135,40 +160,29 @@
 .list__name {
   margin: 0;
   margin-bottom: 20px;
-  color: #fff;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
+  color: $white-text-color;
   line-height: 140.63%;
 }
 
 .item__bold {
-  color: #fff;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
+  color: $white-text-color;
   font-weight: 600;
-  line-height: 150%;
 }
 
 .list__items {
-  color: #fff;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
+  cursor: pointer;
+  color: $white-text-color;
+
+  @include TextHover;
 }
 
 .side__weekend--days {
-  color: #fff;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
+  color: $white-text-color;
   margin: 0;
+
+  cursor: pointer;
+
+  @include TextHover;
 
   @include onTablet {
     width: 144px;
