--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,3 @@
-body {
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-
 .header {
   position: relative;
   width: 100%;
@@ -16,224 +11,173 @@ body {
   @include onDesktop {
     height: 725px;
   }
-}
 
-.header__bg {
-  background-image: url(../images/header-bg-image.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 300px;
-  z-index: -1;
-  position: absolute;
+  &__bg {
+    background-image: url(../images/header-bg-image.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 300px;
+    z-index: -1;
+    position: absolute;
 
-  @include onTablet {
-    width: 50%;
-    height: 384px;
-    top: 0;
-    right: 0;
-    left: 50%;
+    @include onTablet {
+      width: 50%;
+      height: 384px;
+      top: 0;
+      right: 0;
+      left: 50%;
+    }
+
+    @include onDesktop {
+      width: 57%;
+      height: 655px;
+    }
   }
 
-  @include onDesktop {
-    width: 57%;
-    height: 655px;
+  &__title {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    margin-top: 259px;
+
+    color: #000;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 100%;
+
+    grid-column: 1 / -1;
+
+    @include onTablet {
+      text-align: left;
+      font-size: 54px;
+      margin-top: 40px;
+      grid-column: 1 / 4;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
+      line-height: 120%;
+      margin-top: 120px;
+      grid-column: 1 / 6;
+    }
+  }
+
+  &__button {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+    color: #0f0e08;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 100%;
+
+    margin: 0;
+    height: 50px;
+    width: 100%;
+    border: 1px solid $museum-green;
+
+    margin-top: 20px;
+
+    grid-column: 1 / -1;
+
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+
+      background-color: #1a5a4c5c;
+      color: $white-text-color;
+    }
+
+    @include onTablet {
+      width: 270px;
+      height: 70px;
+      margin-top: 38px;
+      grid-column: 1 / 4;
+    }
+
+    @include onDesktop {
+      grid-column: 3 / 6;
+    }
+    &::after {
+      content: " ";
+      position: absolute;
+      right: 0;
+      background-image: url(../images/icons/baseline-keyboard_arrow_right-24px.png);
+      width: 50px;
+      height: 50px;
+      background-color: $museum-green;
+      background-repeat: no-repeat;
+      background-position: center;
+
+      @include onTablet {
+        height: 70px;
+        width: 70px;
+      }
+    }
+  }
+
+  &__line {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    @include onDesktop {
+      display: flex;
+
+      grid-column: 1 / 2;
+    }
+    &--text {
+      color: #687480;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 100%;
+      writing-mode: vertical-rl;
+      transform: rotate(-180deg);
+    }
+
+    &--line {
+      width: 1px;
+      height: 70px;
+      background: $museum-green;
+    }
   }
 }
 
 .container {
-  box-sizing: border-box;
-  padding: 0;
-  width: 100%;
-  @include pageGrid;
+  @include content;
   padding-top: 10px;
-  @include PaddingInlain;
 
   @include onTablet {
     padding-top: 15px;
   }
-}
 
-.header__title {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  margin-top: 259px;
+  &__item {
+    color: #0f0e08;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 100%;
+    width: min-content;
+    margin: 0 auto;
+    margin-top: 70px;
 
-  color: #000;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
+    grid-column: 1 / -1;
 
-  grid-column: 1 / -1;
+    @include onTablet {
 
-  @include onTablet {
-    text-align: left;
-    font-size: 54px;
-    margin-top: 40px;
-    grid-column: 1 / 4;
-  }
-
-  @include onDesktop {
-    font-size: 72px;
-    line-height: 120%;
-    margin-top: 120px;
-    grid-column: 1 / 6;
-  }
-}
-
-.header__item {
-  color: #0f0e08;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  width: min-content;
-  margin: 0 auto;
-  margin-top: 70px;
-
-  grid-column: 1 / -1;
-
-  @include onTablet {
-
-    text-align: left;
-    width: 100%;
-    font-size: 48px;
-    grid-column: 1 / 5;
-  }
-}
-
-.header__button {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-
-  color: #0f0e08;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 100%;
-
-  margin: 0;
-  height: 50px;
-  width: 100%;
-  border: 1px solid #1a5a4c;
-
-  margin-top: 20px;
-
-  grid-column: 1 / -1;
-
-  @include onTablet {
-    width: 270px;
-    height: 70px;
-    margin-top: 38px;
-    grid-column: 1 / 4;
-  }
-
-  @include onDesktop {
-    grid-column: 3 / 6;
-  }
-}
-
-.header__button::after {
-  content: " ";
-  position: absolute;
-  right: 0;
-  background-image: url(../images/icons/baseline-keyboard_arrow_right-24px.png);
-  width: 50px;
-  height: 50px;
-  background-color: #1a5a4c;
-  background-repeat: no-repeat;
-  background-position: center;
-
-  @include onTablet {
-    height: 70px;
-    width: 70px;
-  }
-}
-
-.header__line {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-
-  @include onDesktop {
-    display: flex;
-
-    grid-column: 1 / 2;
-  }
-}
-
-.header__line--text {
-  color: #687480;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  writing-mode: vertical-rl;
-  transform: rotate(-180deg);
-}
-
-.header__line--line {
-  width: 1px;
-  height: 70px;
-  background: #1a5a4c;
-}
-
-/////////////////
-.top__bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 61px;
-  width: 60%;
-
-  grid-column: 1 / -1;
-
-  @include onTablet {
-    height: fit-content;
-  }
-}
-
-.logo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 55px;
-  height: 61px;
-}
-
-.logo__picture {
-  width: 100%;
-}
-
-/////////////
-.icon {
-  width: 24px;
-  height: 24px;
-  background-image: url(../images/icons/baseline-menu.png);
-  background-position: center;
-}
-
-.icon--close {
-  background-image: url(../images/icons/ri-close-fill.png);
-  margin-right: 28px;
-
-  @include onTablet {
-    margin-right: 38px;
-  }
-
-  @include onDesktop {
-    margin-right: 102px;
+      text-align: left;
+      width: 100%;
+      font-size: 48px;
+      grid-column: 1 / 5;
+    }
   }
 }
