--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,48 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onDesign {
+  @media (min-width: 1400px) {
+    @content;
+  }
+}
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin onMobile {
+  @media (min-width: 320px) {
+    @content;
+  }
+}
+
+
+@mixin pageGrid {
+  --columns: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  @include onTablet {
+    --columns: 6;
+    column-gap: 24px;
+  }
+  @include onDesktop {
+    --columns: 12;
+  }
+}
+
+@mixin styleHeader {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 400;
+  color: #FFFFFF;
+  font-size: 14px;
+}
