--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -4,9 +4,8 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
-    letter-spacing: 0em;
     text-align: left;
-    color: #0F0E08;
+    color: #0f0e08;
     margin-bottom: 20px;
   }
 
@@ -15,12 +14,11 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
-    letter-spacing: 0em;
     text-align: left;
   }
 
   &__link {
     text-decoration: none;
-    color: #0F0E08;
+    color: #0f0e08;
   }
 }
