--- a/src/styles/_exibition.scss
+++ b/src/styles/_exibition.scss
@@ -59,7 +59,6 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0em;
     color: #687480;
 
     @include onTablet {
@@ -72,8 +71,7 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
-    letter-spacing: 0em;
-    color: #1A5A4C;
+    color: #1a5a4c;
 
     @include onTablet {
       line-height: 14px;
@@ -89,7 +87,6 @@
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
-    letter-spacing: 0em;
     width: max-content;
     margin-bottom: 10px;
 
@@ -117,7 +114,6 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
-    letter-spacing: 0em;
-    color: #4E4E4E;
+    color: #4e4e4e;
   }
 }
