--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -12,10 +12,9 @@
     justify-content: space-between;
 
     @include onTablet {
-      margin-bottom: 62px;
+      margin-bottom: 0;
       flex-direction: column;
       grid-column: 1 / 2;
-      margin: 0;
       justify-content: start;
       align-items: start;
       gap: 62px;
@@ -31,7 +30,6 @@
       width: 63px;
     }
   }
-
 
   &__socials {
     gap: 20px;
@@ -65,7 +63,7 @@
   }
 
   &__weekend {
-    color: #0F0E08;
+    color: #0f0e08;
 
     grid-column: 1 / 2;
 
@@ -94,7 +92,7 @@
     display: block;
     width: 50px;
     height: 50px;
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
     border-radius: 50%;
     background-image: url(../images/icons/arrow-up.svg);
     background-repeat: no-repeat;
@@ -177,9 +175,8 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 14px;
-    letter-spacing: 0em;
     text-align: left;
-    color: #0F0E08;
+    color: #0f0e08;
 
     &::after {
       content: "";
@@ -188,10 +185,10 @@
       display: block;
       width: 100%;
       height: 1px;
-      background-color: #0F0E08;
+      background-color: #0f0e08;
 
       transform: scale(0);
-      transition: transform .3s linear;
+      transition: transform 0.3s linear;
       transform-origin: left;
     }
 
@@ -210,9 +207,8 @@
     font-size: 12px;
     font-weight: 300;
     line-height: 17px;
-    letter-spacing: 0em;
     text-align: center;
-    color: #0F0E08;
+    color: #0f0e08;
 
     grid-column: span 2;
 
