--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -69,7 +69,6 @@
     font-size: 45px;
     font-weight: 700;
     line-height: 45px;
-    letter-spacing: 0em;
     text-align: center;
     text-transform: uppercase;
     color: #000;
@@ -101,7 +100,6 @@
     top: 315px;
     left: 55px;
 
-
     @include onDesktop {
       display: flex;
     }
@@ -116,7 +114,7 @@
       font-size: 14px;
       font-weight: 700;
       line-height: 100%;
-      transition: .7s;
+      transition: 0.7s;
 
       &:hover {
         margin-bottom: 10px;
@@ -127,7 +125,7 @@
       margin-top: 20px;
       width: 1px;
       height: 70px;
-      background-color: #1A5A4C;
+      background-color: #1a5a4c;
     }
   }
 }
