--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -23,13 +23,13 @@
     width: 280px;
     height: 140px;
     background-color: #fff;
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    box-shadow: 0 2px 0 0 #1a5a4c40;
     bottom: -80px;
 
     @include onTablet {
       width: 570px;
       height: 205px;
-      padding: 45px 55px 50px 55px;
+      padding: 45px 55px 50px;
       bottom: -120px;
     }
   }
@@ -52,7 +52,6 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0em;
     color: #687480;
 
     @include onTablet {
@@ -65,8 +64,7 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
-    letter-spacing: 0em;
-    color: #1A5A4C;
+    color: #1a5a4c;
 
     @include onTablet {
       display: block;
@@ -81,9 +79,8 @@
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
-    letter-spacing: 0em;
     text-align: center;
-    color: #0F0E08;
+    color: #0f0e08;
 
     @include onTablet {
       font-size: 36px;
