--- a/src/styles/_schedule.scss
+++ b/src/styles/_schedule.scss
@@ -4,12 +4,11 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
-    letter-spacing: 0em;
     color: #fff;
     margin-bottom: 20px;
 
     &--footer {
-      color: #0F0E08;
+      color: #0f0e08;
     }
   }
 
@@ -25,10 +24,9 @@
     font-family: $font-family--2;
     font-size: 14px;
     line-height: 21px;
-    letter-spacing: 0em;
 
     &--footer {
-      color: #0F0E08;
+      color: #0f0e08;
     }
   }
 
@@ -37,6 +35,5 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 21px;
-    letter-spacing: 0em;
   }
 }
