--- a/src/styles/_actions.scss
+++ b/src/styles/_actions.scss
@@ -50,9 +50,8 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
-    letter-spacing: 0em;
     text-align: center;
-    color: #0F0E08;
+    color: #0f0e08;
     margin-bottom: 40px;
 
     @include onTablet {
