--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -5,8 +5,8 @@
     display: flex;
 
     @include onTablet {
-    --form-height: 70px;
-    gap: 16px;
+      --form-height: 70px;
+      gap: 16px;
     }
 
     @include onDesktop {
@@ -27,12 +27,11 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 14px;
-    letter-spacing: 0em;
     text-align: left;
     color: #000;
 
     @include onTablet {
-    font-size: 16px;
+      font-size: 16px;
       width: 374px;
     }
 
@@ -47,11 +46,10 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
-      letter-spacing: 0em;
       text-align: left;
       color: #687480;
 
-      transform: translateX(0px);
+      transform: translateX(0);
       transition: transform 0.3s ease;
     }
 
@@ -68,11 +66,11 @@
     width: var(--form-height);
     height: var(--form-height);
     border: none;
-    background-color: #F14A27;
+    background-color: #f14a27;
     background-image: url(../images/icons/icon--tickets--black.svg);
     background-repeat: no-repeat;
     background-position: center;
-    transition: background-color .5s;
+    transition: background-color 0.5s;
 
     &:hover {
       cursor: pointer;
