--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -16,14 +16,14 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: #1A5A4C;
+    background-color: #1a5a4c;
 
     @include onTablet {
       padding: 40px 35px;
       flex-direction: row;
     }
 
-    @include onDesktop{
+    @include onDesktop {
       padding: 40px 55px;
     }
   }
@@ -69,7 +69,7 @@
     }
   }
 
-  &__item{
+  &__item {
     width: 100px;
     display: flex;
     flex-direction: column;
@@ -86,12 +86,11 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0em;
     color: #fff;
-    transition: text-shadow .7s;
+    transition: text-shadow 0.7s;
 
     &:hover {
-      text-shadow: 0 0 10px #fff
+      text-shadow: 0 0 10px #fff;
     }
 
     @include onDesktop {
