--- a/src/styles/_tickets.scss
+++ b/src/styles/_tickets.scss
@@ -23,7 +23,6 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 0em;
     text-transform: uppercase;
     color: $fontColorDark--2;
   }
@@ -32,7 +31,7 @@
     width: 48px;
     height: 48px;
     background-color: #1a5a4c;
-    transition: .5s;
+    transition: 0.5s;
 
     &:hover {
       background-color: #257d6b;
