--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,12 +7,18 @@
   }
 
   &__link {
+    display: block;
     color: #fff;
     font-family: $font-family-main;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
     text-decoration: none;
+    transition: transform 0.3s ease-in;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onDesktop {
       font-size: 22px;
