--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -8,6 +8,7 @@
     grid-column: span 2;
 
     @include onTablet {
+      justify-content: center;
       grid-column: span 6;
       row-gap: 64px;
     }
