--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,6 +3,8 @@
   grid-template-rows: 1fr 180px 44px;
   padding-block: 40px;
 
+  @include contentPaddingInline;
+
   @include onDesktop {
     grid-template-rows: 1fr 17px;
     row-gap: 87px;
