--- a/src/styles/blocks/utils/mixins.scss
+++ b/src/styles/blocks/utils/mixins.scss
@@ -34,7 +34,7 @@
 
 @mixin grid {
   display: grid;
-  grid-template-columns: 130px 130px;
+  grid-template-columns: 1fr 1fr;
   column-gap: 20px;
   justify-content: center;
 
