--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,5 +1,6 @@
 .contacts {
   display: grid;
+  grid-column: span 2;
   grid-row: 1;
   grid-template-rows: 72px 1fr;
   row-gap: 40px;
@@ -63,7 +64,7 @@
   &__main {
     display: grid;
     grid-column: span 2;
-    grid-template-columns: 130px 130px;
+    grid-template-columns: 1fr 1fr;
     column-gap: 20px;
     align-items: self-start;
     width: 100%;
