--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,6 +2,8 @@
   @include grid;
   row-gap: 20px;
 
+  @include contentPaddingInline;
+
   @include onTablet {
     margin-top: 112px;
     row-gap: 32px;
@@ -48,7 +50,7 @@
       &--image {
         width: 100%;
         height: 410px;
-        object-fit: cover;
+        object-fit: contain;
         display: none;
 
         transform: translateX(100%);
@@ -60,6 +62,7 @@
         }
 
         @include onTablet {
+          object-fit: cover;
           height: 543px;
 
           &:nth-child(2) {
