--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -32,15 +32,10 @@
     padding: 15px;
     background-color: $text-color-green;
     background-image: url(../images/icon/icon-arrow.svg);
-    transition: transform 0.3s ease-in;
-
-    &:hover {
-      transform: scale(1.2);
-    }
+    transition: all 0.3s ease-in;
 
     @include onTablet {
       padding: 24px;
-      margin-left: 24px;
     }
 
     &-black {
