aome problem with main.js

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,4 @@
 @import "./blocks/picture.scss";
 @import "./blocks/separator.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
