--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,8 @@
 .gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   &__picture {
     width: 100%;
     height: 410px;
