--- a/src/styles/blocks/separator.scss
+++ b/src/styles/blocks/separator.scss
@@ -1,5 +1,5 @@
 .separator {
-  margin: 60px -20px 100px -20px;
+  margin: 60px -20px 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
